--- a/media/css/style.css
+++ b/media/css/style.css
@@ -23,12 +23,12 @@ a:hover{color:#333333;text-decoration:underline;}
 hr{margin:.7em 0;border-top:1px dashed #d0d0d0;border-bottom:1px dashed #f9f9f9;}
 p{padding:.5em 0;margin:.5em 0;}
 li{padding: .2em 2em;}
-ol{list-style-position:inside;border: rgb(226, 222, 222);border-style: solid;border-width:2px;border-radius: 10px;padding: .3em 0;}
-ul{list-style-position:inside;border: rgb(226, 222, 222);border-style: solid;border-width:2px;border-radius: 10px;padding: .3em 0;}
+ol{list-style-position:inside;border: rgb(226, 222, 222);border-style: solid;border-width:0px;border-radius: 10px;padding: .3em 0;}
+ul{list-style-position:inside;border: rgb(226, 222, 222);border-style: solid;border-width:0px;border-radius: 10px;padding: .3em 0;}
 li ol{border-style:none;}
 li ul{border-style:none;}
 ol ul, ul ol, ul ul, ol ol {margin-left:1em;}
-pre code{margin:1em 0;font-size:15px;line-height:1.6;display:block;overflow:auto;}
+pre code{margin:0 0;font-size:15px;line-height:1.2;display:block;overflow:auto;}
 blockquote{display:block;text-align:justify;border-left:4px solid #eeeeee;}
 blockquote{margin:1em 0em;padding-left:1.5em;}
 blockquote p{margin:0;padding:.5em 0;}
@@ -62,7 +62,7 @@ h1{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-siz
 h2{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.4em;color:#111;}
 h3{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.2em;color:#222;padding: .5em 0em;margin:0em 0em}
 h4{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1em;color:#333;}
-pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;}
+pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:15px;}
 code{background-color:rgba(208, 208, 208, 0.29);}
 embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
